gcc/testsuite/rust/rustc/ui/codemap_tests/issue-28308.rs
fn main() {
    assert!("foo");
// { dg-error ".E0600." "" { target *-*-* } .-1 }
}

